--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lsx-cli",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,7 @@
     "compile": "babel src -d dist",
     "watch": "npm run compile -- --watch"
   },
-  "keywords": [],
+  "keywords": ["cli"],
   "author": "290006982@qq.com",
   "license": "MIT",
   "dependencies": {
@@ -24,5 +24,9 @@
     "inquirer": "^7.2.0",
     "log-symbols": "^4.0.0",
     "ora": "^4.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lsx4715126/lsx-cli.git"
   }
 }
